--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
+        <div class="header-text">
+            <p>UI/UX Designer</p>
+            <h1>Ola, somos Cowboy e Cowgirl, os narradores da alegria</h1>
+        </div>
       </div>
     </div>
   </body>
