--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </nav>
         <div class="header-text">
             <p>UI/UX Designer</p>
-            <h1>Ola, somos Cowboy e Cowgirl, os narradores da alegria</h1>
+            <h1>Ola, somos <span>COWBOY & COWGIRL</span> <br>
+                Os narradores da alegria!</h1>
         </div>
       </div>
     </div>
