--- a/index.html
+++ b/index.html
@@ -21,9 +21,43 @@
           </ul>
         </nav>
         <div class="header-text">
-            <p>UI/UX Designer</p>
-            <h1>Ola, somos <span>COWBOY & COWGIRL</span> <br>
-                Os narradores da alegria!</h1>
+          <p>Narradores</p>
+          <h1>
+            Ola, somos <span>COWBOY & COWGIRL</span> <br />
+            Os narradores da alegria!
+          </h1>
+        </div>
+      </div>
+    </div>
+    <!-- --------about------- -->
+    <div id="about">
+      <div class="container">
+        <div class="row">
+          <div class="about-col-1">
+            <img src="images/user.png" />
+          </div>
+          <div class="about-col-2">
+            <h1 class="sub-titulo">Sobre Nós</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta ab
+              animi cupiditate repudiandae quam aliquam officiis sapiente,
+              consectetur praesentium illum vel commodi expedita voluptates
+              reiciendis impedit voluptate dolorem? Consequuntur, molestiae.
+            </p>
+
+            <div class="tab-titles">
+                <p class="tab-links active-link">Habilidades</p>
+                <p class="tab-links">Experiência</p>
+                <p class="tab-links">Vocação</p>
+            </div>
+            <div class="tab-contents">
+                <ul>
+                    <li><span>UI/UX</span>Designers Web/App interfaces</li>
+                    <li><span>Web Development</span>Web app Development</li>
+                    <li><span>App Development</span>Build app Android/IOS</li>
+                </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
