--- a/index.html
+++ b/index.html
@@ -46,20 +46,55 @@
             </p>
 
             <div class="tab-titles">
-                <p class="tab-links active-link">Habilidades</p>
-                <p class="tab-links">Experiência</p>
-                <p class="tab-links">Vocação</p>
+              <p class="tab-links active-link" onclick="opentab('habilidade')">
+                Habilidades
+              </p>
+              <p class="tab-links" onclick="opentab('experiencia')">
+                Experiência
+              </p>
+              <p class="tab-links" onclick="opentab('vocacao')">Vocação</p>
             </div>
-            <div class="tab-contents">
-                <ul>
-                    <li><span>UI/UX</span>Designers Web/App interfaces</li>
-                    <li><span>Web Development</span>Web app Development</li>
-                    <li><span>App Development</span>Build app Android/IOS</li>
-                </ul>
+            <div class="tab-contents active-tab" id="habilidade">
+              <ul>
+                <li><span>Habilidade 1</span><br />Texto habilidade 1</li>
+                <li><span>Habilidade 2</span><br />Texto habilidade 2</li>
+                <li><span>Habilidade 3</span><br />Texto habilidade 3</li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experiencia">
+              <ul>
+                <li><span>Experiência 1</span><br />Texto da Experiência 1</li>
+                <li><span>Experiência 2</span><br />Texto da Experiência 2</li>
+                <li><span>Experiência 3</span><br />Texto da Experiência 3</li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="vocacao">
+              <ul>
+                <li><span>Vocação 1</span><br />Texto da Vocação 1</li>
+                <li><span>Vocação 2</span><br />Texto da Vocação 2</li>
+                <li><span>Vocação 3</span><br />Texto da Vocação 3</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <script>
+      var tablinks = document.getElementsByClassName("tab-links");
+      var tabcontents = document.getElementsByClassName("tab-contents");
+
+      function opentab(tabname) {
+        for (tablink of tablinks) {
+          tablink.classList.remove("active-link");
+        }
+        for (tabcontent of tabcontents) {
+          tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+
+      }
+    </script>
   </body>
 </html>
