--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio Pessoal</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="header">
@@ -79,6 +80,47 @@
         </div>
       </div>
     </div>
+    <!-- ---------------services-------------- -->
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-titulo">Nossos Serviços</h1>
+        <div class="services-list">
+          <div>
+            <i class="fa fa-code"></i>
+            <h2>Serviço 1</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+              sunt placeat perspiciatis labore sed commodi qui amet quod quos
+              est! Quod omnis dolor odio, ullam rerum laudantium. Maiores,
+              delectus porro!
+            </p>
+            <a href="#">+Detalhes</a>
+          </div>
+          <div>
+            <i class="fa fa-crop"></i>
+            <h2>Serviço 2</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+              sunt placeat perspiciatis labore sed commodi qui amet quod quos
+              est! Quod omnis dolor odio, ullam rerum laudantium. Maiores,
+              delectus porro!
+            </p>
+            <a href="#">+Detalhes</a>
+          </div>
+          <div>
+            <i class="fa fa-crosshairs"></i>
+            <h2>Serviço 3</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
+              sunt placeat perspiciatis labore sed commodi qui amet quod quos
+              est! Quod omnis dolor odio, ullam rerum laudantium. Maiores,
+              delectus porro!
+            </p>
+            <a href="#">+Detalhes</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script>
       var tablinks = document.getElementsByClassName("tab-links");
@@ -93,7 +135,6 @@
         }
         event.currentTarget.classList.add("active-link");
         document.getElementById(tabname).classList.add("active-tab");
-
       }
     </script>
   </body>
