--- a/index.html
+++ b/index.html
@@ -122,6 +122,40 @@
       </div>
     </div>
 
+    <!-- -----------------portfolio---------------- -->
+    <div id="portfolio">
+      <div class="container">
+        <h1 class="sub-titulo">Nossos Trabalhos</h1>
+        <div class="work-list">
+          <div class="work">
+            <img src="images/work-1.png">
+            <div class="layer">
+              <h3>Trabalho 1</h3>
+              <p>Trabalho realizado com muito carinho para nossos parceiros</p>
+              <a href="#"><i class="fa fa-external-link"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/work-2.png">
+            <div class="layer">
+              <h3>Trabalho 2</h3>
+              <p>Trabalho realizado com muito carinho para nossos parceiros</p>
+              <a href="#"><i class="fa fa-external-link"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/work-3.png">
+            <div class="layer">
+              <h3>Trabalho 2</h3>
+              <p>Trabalho realizado com muito carinho para nossos parceiros</p>
+              <a href="#"><i class="fa fa-external-link"></i></a>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="btn">Saber +</a>
+      </div>
+    </div>
+
     <script>
       var tablinks = document.getElementsByClassName("tab-links");
       var tabcontents = document.getElementsByClassName("tab-contents");
