--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio Pessoal</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div id="header">
@@ -128,7 +131,7 @@
         <h1 class="sub-titulo">Nossos Trabalhos</h1>
         <div class="work-list">
           <div class="work">
-            <img src="images/work-1.png">
+            <img src="images/work-1.png" />
             <div class="layer">
               <h3>Trabalho 1</h3>
               <p>Trabalho realizado com muito carinho para nossos parceiros</p>
@@ -136,7 +139,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/work-2.png">
+            <img src="images/work-2.png" />
             <div class="layer">
               <h3>Trabalho 2</h3>
               <p>Trabalho realizado com muito carinho para nossos parceiros</p>
@@ -144,7 +147,7 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/work-3.png">
+            <img src="images/work-3.png" />
             <div class="layer">
               <h3>Trabalho 2</h3>
               <p>Trabalho realizado com muito carinho para nossos parceiros</p>
@@ -153,6 +156,37 @@
           </div>
         </div>
         <a href="#" class="btn">Saber +</a>
+      </div>
+    </div>
+
+    <!-- ------------contatos------------------->
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="sub-titulo">Contatos</h1>
+            <p><i class="fa fa-paper-plane"></i>contato@exemplo.com</p>
+            <p><i class="fa fa-phone-square"></i>62992843195</p>
+            <div class="social-icons">
+              <a href="#"><i class="fa fa-facebook-square"></i></a>
+              <a href="#"><i class="fa fa-twitter-square"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            </div>
+            <a href="images/my-cv.pdf" download class="btn">Download CV</a>
+          </div>
+          <div class="contact-right">
+            <form>
+              <input type="text" name="name" placeholder="Seu nome" required>
+              <input type="email" name="email" placeholder="Seu email" required>
+              <textarea name="message" rows="6" placeholder="Sua mensagem"></textarea>
+              <button type="submit" class="btn btn2">Confirmar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+          <p>Copyright © Cowboy Cowgirl. Todos os direitos <i class="fa fa-heart"></i> reservados</p>
       </div>
     </div>
 
